src/main/java/txml/parser/XQueryParser.java
/* 
 * Copyright 2016 Tomas Kunovsky.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package txml.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class XQueryParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OpEq=1, OpNEq=2, OpLess=3, OpMore=4, OpLe=5, OpGe=6, OpPrecedes=7, OpFollows=8, 
		OpLMeets=9, OpRMeets=10, OpOverlaps=11, OpContains=12, OpIn=13, StringLiteral=14, 
		Whitespace=15, COLON=16, AT=17, PATHSEP=18, ABRPATH=19, DASH=20, LBRAC=21, 
		RBRAC=22, LPAR=23, RPAR=24, LCURBRAC=25, RCURBRAC=26, SEMICOLON=27, COMMA=28, 
		TXML_COLON_DOCSNAPSHOT=29, FOR=30, IN=31, INSERT=32, VALUE=33, POSITION=34, 
		DELETE=35, NODE=36, SET=37, PARENT=38, AS=39, DECLARE=40, OPTION=41, DOCUMENT=42, 
		SCHEMA=43, TXML_COLON_CONNECTION=44, TXML_COLON_TIME_FORMAT=45, TXML_COLON_SORT=46, 
		TXML_COLON_INITSCHEMA=47, TXML_COLON_DEINITSCHEMA=48, TXML_COLON_STORE=49, 
		TXML_COLON_DOC=50, TEXT=51, DOT=52, STAR=53, TWO_DOTS=54, DIGIT=55, LAST=56, 
		TWO_COLON=57, ATTRIBUTE=58, BlockComment=59, VariableStart=60, Name=61, 
		NameChar=62, NameStartChar=63;
	public static final int
		RULE_main = 0, RULE_prolog = 1, RULE_declareOption = 2, RULE_declareOptionConnection = 3, 
		RULE_declareOptionTimeFormat = 4, RULE_declareOptionSort = 5, RULE_documentName = 6, 
		RULE_schemaName = 7, RULE_timeFormat = 8, RULE_sort = 9, RULE_connectionUrl = 10, 
		RULE_fileFullName = 11, RULE_body = 12, RULE_statement = 13, RULE_initSchema = 14, 
		RULE_deinitSchema = 15, RULE_storeDocument = 16, RULE_storeDocumentWithName = 17, 
		RULE_storeDocumentWithoutName = 18, RULE_doc = 19, RULE_snapshotQuery = 20, 
		RULE_absPathExprWithDoc = 21, RULE_xPathQuery = 22, RULE_update = 23, 
		RULE_forClause = 24, RULE_updateExpr = 25, RULE_insertExpr = 26, RULE_deleteExpr = 27, 
		RULE_parentExpr = 28, RULE_parentXPathExpression = 29, RULE_childXPathExpression = 30, 
		RULE_simpleXPathExpression = 31, RULE_insertXPathExpression = 32, RULE_absPathExpr = 33, 
		RULE_steps = 34, RULE_undirectStep = 35, RULE_directStep = 36, RULE_predicate = 37, 
		RULE_xPathInExpr = 38, RULE_expr = 39, RULE_position = 40, RULE_last = 41, 
		RULE_integerNumber = 42, RULE_operator = 43, RULE_variable = 44, RULE_nodeGenerator = 45, 
		RULE_currentNodes = 46, RULE_parentNodes = 47, RULE_childsElements = 48, 
		RULE_nodesByType = 49, RULE_textNodes = 50, RULE_elementName = 51, RULE_attributeName = 52, 
		RULE_value = 53, RULE_insert_pos = 54, RULE_time = 55, RULE_format = 56;
	public static final String[] ruleNames = {
		"main", "prolog", "declareOption", "declareOptionConnection", "declareOptionTimeFormat", 
		"declareOptionSort", "documentName", "schemaName", "timeFormat", "sort", 
		"connectionUrl", "fileFullName", "body", "statement", "initSchema", "deinitSchema", 
		"storeDocument", "storeDocumentWithName", "storeDocumentWithoutName", 
		"doc", "snapshotQuery", "absPathExprWithDoc", "xPathQuery", "update", 
		"forClause", "updateExpr", "insertExpr", "deleteExpr", "parentExpr", "parentXPathExpression", 
		"childXPathExpression", "simpleXPathExpression", "insertXPathExpression", 
		"absPathExpr", "steps", "undirectStep", "directStep", "predicate", "xPathInExpr", 
		"expr", "position", "last", "integerNumber", "operator", "variable", "nodeGenerator", 
		"currentNodes", "parentNodes", "childsElements", "nodesByType", "textNodes", 
		"elementName", "attributeName", "value", "insert_pos", "time", "format"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'='", "'!='", "'<'", "'>'", "'<='", "'>='", "'PRECEDES'", "'FOLLOWS'", 
		null, "'RMEETS'", "'OVERLAPS'", "'CONTAINS'", "'IN'", null, null, "':'", 
		"'@'", "'/'", "'//'", "'-'", "'['", "']'", "'('", "')'", "'{'", "'}'", 
		"';'", "','", null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "'.'", "'*'", "'..'", null, "'last()'", "'::'", null, null, "'$'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "OpEq", "OpNEq", "OpLess", "OpMore", "OpLe", "OpGe", "OpPrecedes", 
		"OpFollows", "OpLMeets", "OpRMeets", "OpOverlaps", "OpContains", "OpIn", 
		"StringLiteral", "Whitespace", "COLON", "AT", "PATHSEP", "ABRPATH", "DASH", 
		"LBRAC", "RBRAC", "LPAR", "RPAR", "LCURBRAC", "RCURBRAC", "SEMICOLON", 
		"COMMA", "TXML_COLON_DOCSNAPSHOT", "FOR", "IN", "INSERT", "VALUE", "POSITION", 
		"DELETE", "NODE", "SET", "PARENT", "AS", "DECLARE", "OPTION", "DOCUMENT", 
		"SCHEMA", "TXML_COLON_CONNECTION", "TXML_COLON_TIME_FORMAT", "TXML_COLON_SORT", 
		"TXML_COLON_INITSCHEMA", "TXML_COLON_DEINITSCHEMA", "TXML_COLON_STORE", 
		"TXML_COLON_DOC", "TEXT", "DOT", "STAR", "TWO_DOTS", "DIGIT", "LAST", 
		"TWO_COLON", "ATTRIBUTE", "BlockComment", "VariableStart", "Name", "NameChar", 
		"NameStartChar"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "XQuery.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public XQueryParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MainContext extends ParserRuleContext {
		public PrologContext prolog() {
			return getRuleContext(PrologContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode EOF() { return getToken(XQueryParser.EOF, 0); }
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitMain(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			prolog();
			setState(115);
			body();
			setState(116);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrologContext extends ParserRuleContext {
		public List<DeclareOptionContext> declareOption() {
			return getRuleContexts(DeclareOptionContext.class);
		}
		public DeclareOptionContext declareOption(int i) {
			return getRuleContext(DeclareOptionContext.class,i);
		}
		public PrologContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prolog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterProlog(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitProlog(this);
		}
	}

	public final PrologContext prolog() throws RecognitionException {
		PrologContext _localctx = new PrologContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prolog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DECLARE) {
				{
				{
				setState(118);
				declareOption();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclareOptionContext extends ParserRuleContext {
		public DeclareOptionConnectionContext declareOptionConnection() {
			return getRuleContext(DeclareOptionConnectionContext.class,0);
		}
		public DeclareOptionTimeFormatContext declareOptionTimeFormat() {
			return getRuleContext(DeclareOptionTimeFormatContext.class,0);
		}
		public DeclareOptionSortContext declareOptionSort() {
			return getRuleContext(DeclareOptionSortContext.class,0);
		}
		public DeclareOptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareOption; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterDeclareOption(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitDeclareOption(this);
		}
	}

	public final DeclareOptionContext declareOption() throws RecognitionException {
		DeclareOptionContext _localctx = new DeclareOptionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declareOption);
		try {
			setState(127);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				declareOptionConnection();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				declareOptionTimeFormat();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(126);
				declareOptionSort();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclareOptionConnectionContext extends ParserRuleContext {
		public TerminalNode DECLARE() { return getToken(XQueryParser.DECLARE, 0); }
		public TerminalNode OPTION() { return getToken(XQueryParser.OPTION, 0); }
		public TerminalNode TXML_COLON_CONNECTION() { return getToken(XQueryParser.TXML_COLON_CONNECTION, 0); }
		public ConnectionUrlContext connectionUrl() {
			return getRuleContext(ConnectionUrlContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(XQueryParser.SEMICOLON, 0); }
		public DeclareOptionConnectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareOptionConnection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterDeclareOptionConnection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitDeclareOptionConnection(this);
		}
	}

	public final DeclareOptionConnectionContext declareOptionConnection() throws RecognitionException {
		DeclareOptionConnectionContext _localctx = new DeclareOptionConnectionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declareOptionConnection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(DECLARE);
			setState(130);
			match(OPTION);
			setState(131);
			match(TXML_COLON_CONNECTION);
			setState(132);
			connectionUrl();
			setState(133);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclareOptionTimeFormatContext extends ParserRuleContext {
		public TerminalNode DECLARE() { return getToken(XQueryParser.DECLARE, 0); }
		public TerminalNode OPTION() { return getToken(XQueryParser.OPTION, 0); }
		public TerminalNode TXML_COLON_TIME_FORMAT() { return getToken(XQueryParser.TXML_COLON_TIME_FORMAT, 0); }
		public TimeFormatContext timeFormat() {
			return getRuleContext(TimeFormatContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(XQueryParser.SEMICOLON, 0); }
		public DeclareOptionTimeFormatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareOptionTimeFormat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterDeclareOptionTimeFormat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitDeclareOptionTimeFormat(this);
		}
	}

	public final DeclareOptionTimeFormatContext declareOptionTimeFormat() throws RecognitionException {
		DeclareOptionTimeFormatContext _localctx = new DeclareOptionTimeFormatContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declareOptionTimeFormat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(DECLARE);
			setState(136);
			match(OPTION);
			setState(137);
			match(TXML_COLON_TIME_FORMAT);
			setState(138);
			timeFormat();
			setState(139);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclareOptionSortContext extends ParserRuleContext {
		public TerminalNode DECLARE() { return getToken(XQueryParser.DECLARE, 0); }
		public TerminalNode OPTION() { return getToken(XQueryParser.OPTION, 0); }
		public TerminalNode TXML_COLON_SORT() { return getToken(XQueryParser.TXML_COLON_SORT, 0); }
		public SortContext sort() {
			return getRuleContext(SortContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(XQueryParser.SEMICOLON, 0); }
		public DeclareOptionSortContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareOptionSort; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterDeclareOptionSort(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitDeclareOptionSort(this);
		}
	}

	public final DeclareOptionSortContext declareOptionSort() throws RecognitionException {
		DeclareOptionSortContext _localctx = new DeclareOptionSortContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declareOptionSort);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(DECLARE);
			setState(142);
			match(OPTION);
			setState(143);
			match(TXML_COLON_SORT);
			setState(144);
			sort();
			setState(145);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DocumentNameContext extends ParserRuleContext {
		public TerminalNode StringLiteral() { return getToken(XQueryParser.StringLiteral, 0); }
		public DocumentNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_documentName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterDocumentName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitDocumentName(this);
		}
	}

	public final DocumentNameContext documentName() throws RecognitionException {
		DocumentNameContext _localctx = new DocumentNameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_documentName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(StringLiteral);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SchemaNameContext extends ParserRuleContext {
		public TerminalNode StringLiteral() { return getToken(XQueryParser.StringLiteral, 0); }
		public SchemaNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schemaName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterSchemaName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitSchemaName(this);
		}
	}

	public final SchemaNameContext schemaName() throws RecognitionException {
		SchemaNameContext _localctx = new SchemaNameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_schemaName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(StringLiteral);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimeFormatContext extends ParserRuleContext {
		public TerminalNode StringLiteral() { return getToken(XQueryParser.StringLiteral, 0); }
		public TimeFormatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_timeFormat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterTimeFormat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitTimeFormat(this);
		}
	}

	public final TimeFormatContext timeFormat() throws RecognitionException {
		TimeFormatContext _localctx = new TimeFormatContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_timeFormat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(StringLiteral);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SortContext extends ParserRuleContext {
		public TerminalNode StringLiteral() { return getToken(XQueryParser.StringLiteral, 0); }
		public SortContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sort; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterSort(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitSort(this);
		}
	}

	public final SortContext sort() throws RecognitionException {
		SortContext _localctx = new SortContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_sort);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(StringLiteral);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConnectionUrlContext extends ParserRuleContext {
		public TerminalNode StringLiteral() { return getToken(XQueryParser.StringLiteral, 0); }
		public ConnectionUrlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_connectionUrl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterConnectionUrl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitConnectionUrl(this);
		}
	}

	public final ConnectionUrlContext connectionUrl() throws RecognitionException {
		ConnectionUrlContext _localctx = new ConnectionUrlContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_connectionUrl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(StringLiteral);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FileFullNameContext extends ParserRuleContext {
		public TerminalNode StringLiteral() { return getToken(XQueryParser.StringLiteral, 0); }
		public FileFullNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fileFullName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterFileFullName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitFileFullName(this);
		}
	}

	public final FileFullNameContext fileFullName() throws RecognitionException {
		FileFullNameContext _localctx = new FileFullNameContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_fileFullName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(StringLiteral);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitBody(this);
		}
	}
